mobile fix for items -- added wrapping

--- a/checklist/src/components/List/style.css
+++ b/checklist/src/components/List/style.css
@@ -15,11 +15,13 @@ ul.Group {
 }
 
 li.Item {
-  padding: 5px 0 5px 10px;
+  padding: 5px 0 5px 9px;
   color: white;
   background-color: #666666;
   border: 0.5px solid black;
   margin: 2px 1px 2px 0;
+  width: calc(100% - 10px);
+  display: inline-block;
 }
 
 .Item-name {
